# task_manager

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .ruff.toml  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cmd/: worker.py
models/: task.py
storage/: json_storage.py
storage/storage_file/: tasks.json
tests/: test_task_collection.py
utils/: contextmanagers.py  decorators.py
