[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.poetry]
name = "task_manager"
version = "0.1.0"
description = "Modular task manager for capstone"
authors = ["saleha"]


[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^24.0"
ruff = "^0.6"
mypy = "^1.5"
pre-commit = "^3.4"
bandit = "^1.8"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"